--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ android {
             includeAndroidResources = true
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -49,19 +54,17 @@ dependencies {
     compile "io.reactivex.rxjava2:rxjava:2.1.7"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    // retrofit (for JSJON API
+    // retrofit (for JSON API)
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    // compile 'io.reactivex:rxjava:1.1.6'
-    // compile 'io.reactivex:rxandroid:1.2.1'
 
-    // bitcoin & web3j
+    // bitcoinj & web3j
     compile 'org.web3j:core-android:2.2.1'
     compile 'com.github.designsters:android-fork-bitcoinj:1.0.10'
 
-    // requesry
+    // requery
     compile 'io.requery:requery:1.4.1'
     compile 'io.requery:requery-android:1.4.1'
     annotationProcessor 'io.requery:requery-processor:1.4.1'
