--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.activity.AuthenticationActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <data android:scheme="authcoin" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.activity.CreatePinActivity"
             android:screenOrientation="portrait">
         </activity>
